Responsive spacing: fixes to components

--- a/src/base/helpers/headings/_headings.scss
+++ b/src/base/helpers/headings/_headings.scss
@@ -24,7 +24,7 @@
 
 @mixin ds_h3-size {
     font-size: px-to-rem($h3-size);
-    line-height: line-height-on-grid($h3-size);
+    line-height: line-height-on-grid($h3-size, 1.3);
 
     @include ds_media-query(medium) {
         font-size: px-to-rem($h3-size--medium, $root-font-size--medium);
@@ -54,17 +54,21 @@
 
 @mixin ds_tiny-size {
     font-size: px-to-rem($tiny-size);
+    line-height: line-height-on-grid($tiny-size);
 
     @include ds_media-query(medium) {
         font-size: px-to-rem($tiny-size--medium, $root-font-size--medium);
+        line-height: line-height-on-grid($tiny-size--medium);
     }
 }
 
 @mixin ds_small-size {
     font-size: px-to-rem($small-size);
+    line-height: line-height-on-grid($small-size);
 
     @include ds_media-query(medium) {
         font-size: px-to-rem($small-size--medium, $root-font-size--medium);
+        line-height: line-height-on-grid($small-size--medium);
     }
 }
 
