--- a/src/components/metadata/_metadata.scss
+++ b/src/components/metadata/_metadata.scss
@@ -65,3 +65,7 @@
         }
     }
 }
+
+:focus-within .ds_metadata--inline {
+    color: currentColor;
+}
