--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -11,7 +11,6 @@ $site-footer__background: $ds_colour__brand !default;
 .ds_site-footer {
     @include ds_small-size;
     background-color: $site-footer__background;
-    line-height: 24px;
 
     &__content {
         padding-bottom: 32px;
@@ -23,6 +22,7 @@ $site-footer__background: $ds_colour__brand !default;
         border-bottom: 1px solid rgba(255, 255, 255, 0.2);
         font-size: $small-size--fixed;
         font-weight: $bold;
+        line-height: line-height-on-grid($small-size--fixed);
         list-style-type: none;
         margin: 0 0 23px; /// [1]
         padding-bottom: 16px;
@@ -77,6 +77,7 @@ $site-footer__background: $ds_colour__brand !default;
 
 
     .ds_site-footer {
+        line-height: 24px;
 
         &__copyright {
             padding-left: 48px;
